# soralia-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data/: maimai_song.json
scripts/: filter_song.py
src/: extensions.py
src/models/: __init__.py  songs.py
src/routes/: __init__.py  base.py  songs.py
src/services/: songs.py
